WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
42899
AX: need a layout test testing misspelled words in attributed strings
https://bugs.webkit.org/show_bug.cgi?id=42899
Summary
AX: need a layout test testing misspelled words in attributed strings
chris fleizach
Reported
2010-07-23 09:29:13 PDT
i'm going to change how misspelled words are calculated. i need a layout test that verifies the feature works as expected now
Attachments
patch
(11.70 KB, patch)
2010-07-23 09:35 PDT
,
chris fleizach
no flags
Details
Formatted Diff
Diff
patch
(13.67 KB, patch)
2010-07-23 09:36 PDT
,
chris fleizach
ddkilzer
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2010-07-23 09:35:41 PDT
Created
attachment 62433
[details]
patch
chris fleizach
Comment 2
2010-07-23 09:36:32 PDT
Created
attachment 62434
[details]
patch forgot a change log
chris fleizach
Comment 3
2010-07-23 15:26:49 PDT
review anyone?
David Kilzer (:ddkilzer)
Comment 4
2010-07-23 21:52:09 PDT
Comment on
attachment 62434
[details]
patch r=me
WebKit Commit Bot
Comment 5
2010-07-24 02:39:59 PDT
Comment on
attachment 62434
[details]
patch Rejecting patch 62434 from commit-queue. Failed to run "['WebKitTools/Scripts/run-webkit-tests', '--no-launch-safari', '--exit-after-n-failures=1', '--ignore-tests', 'compositing', '--quiet']" exit_code: 1 Running build-dumprendertree Compiling Java tests make: Nothing to be done for `default'. Running tests from /Users/eseidel/Projects/CommitQueue/LayoutTests Testing 20716 test cases. platform/mac/accessibility/misspelled-attributed-string.html -> failed Exiting early after 1 failures. 17228 tests run. 316.16s total testing time 17227 test cases (99%) succeeded 1 test case (<1%) had incorrect layout 26 test cases (<1%) had stderr output Full output:
http://queues.webkit.org/results/3593416
chris fleizach
Comment 6
2010-07-24 15:36:49 PDT
http://trac.webkit.org/changeset/64014
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug