AX: need a layout test testing misspelled words in attributed strings https://bugs.webkit.org/show_bug.cgi?id=42899

Reviewed by David Kilzer.

WebKitTools:

* DumpRenderTree/AccessibilityUIElement.cpp:
(attributedStringForRangeCallback):
(attributedStringRangeIsMisspelledCallback):
(AccessibilityUIElement::getJSClass):
* DumpRenderTree/AccessibilityUIElement.h:
* DumpRenderTree/gtk/AccessibilityUIElementGtk.cpp:
(AccessibilityUIElement::attributedStringForRange):
(AccessibilityUIElement::attributedStringRangeIsMisspelled):
* DumpRenderTree/mac/AccessibilityUIElementMac.mm:
(AccessibilityUIElement::attributedStringForRange):
(AccessibilityUIElement::attributedStringRangeIsMisspelled):
* DumpRenderTree/win/AccessibilityUIElementWin.cpp:
(AccessibilityUIElement::attributedStringForRange):
(AccessibilityUIElement::attributedStringRangeIsMisspelled):

LayoutTests:

* platform/mac/accessibility/misspelled-attributed-string-expected.txt: Added.
* platform/mac/accessibility/misspelled-attributed-string.html: Added.



Canonical link: https://commits.webkit.org/54846@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64014 268f45cc-cd09-0410-ab3c-d52691b4dbfc